<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".views.activities.NewsDetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        app:layout_collapseMode="pin">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/colorAccent"
            android:onClick="goBack"
            android:padding="7dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/share"
            android:layout_toRightOf="@+id/back"
            android:ellipsize="end"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/news_details"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />




    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/news_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_below="@+id/title"
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/logo"
                android:background="@color/colorAccent"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainImage"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/darkGray" />

            <TextView
                android:id="@+id/news_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/news_date"
                android:layout_margin="15dp"
                android:textColor="@color/colorInverterDark"
                android:textSize="14sp"
                tools:hint="@string/na" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/news_details"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="@string/na" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/author"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:text="@string/source"
                        android:textColor="@color/darkGray" />

                    <TextView
                        android:id="@+id/source"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorInverter"
                        tools:hint="@string/na" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:text="@string/section"
                        android:textColor="@color/darkGray" />

                    <TextView
                        android:id="@+id/section"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorInverter"
                        tools:hint="@string/na" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:text="@string/sub_section"
                        android:textColor="@color/darkGray" />

                    <TextView
                        android:id="@+id/sub_section"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorInverter"
                        tools:hint="@string/na" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>